K8S/network_k8s/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-back
  labels:
    app: multitool-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool-back
  template:
    metadata:
      labels:
        app: multitool-back
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
