K8S/network_k8s/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-front
  labels:
    app: nginx-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-front
  template:
    metadata:
      labels:
        app: nginx-front
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
