K8S/network_k8s/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-net
  labels:
    app: nginx_multitool
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx_multitool
  template:
    metadata:
      labels:
        app: nginx_multitool
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
