K8S/network_k8s/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: multitool-back
  ports:
    - name: http  
      port: 8080
      targetPort: 8080
