K8S/network_k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
spec:
  selector:
    app: nginx_multitool
  ports:
    - name: http  
      port: 9001
      targetPort: 80
    - name: http-multitool 
      port: 9002
      targetPort: 8080
