K8S/network_k8s/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: nginx-front
  ports:
    - name: http  
      port: 80
      targetPort: 80
