K8S/network_k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort
  selector:
    app: nginx_multitool
  ports:
    - name: http  
      port: 9001
      targetPort: 80
      nodePort: 30001
    - name: http-multitool 
      port: 9002
      targetPort: 8080
      nodePort: 30002
